--- a/aula02.html
+++ b/aula02.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aula Flexbox e Medidas Responsivas</title>
-  <link rel="stylesheet" href="aula02.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JK FINANCEIRO</title>
+    <link rel="stylesheet" href="aula02.css" />
 </head>
+
 <body>
 
-  <header class="cabecalho">
-    <h1>Exemplo de Layout Responsivo com Flexbox</h1>
-  </header>
+    <header class="cabecalho">
+        <h1>JK FINANCEIRO</h1>
+    </header>
 
-  <main class="container">
-    <div class="caixa">Item 1</div>
-    <div class="caixa">Item 2</div>
-    <div class="caixa">Item 3</div>
-  </main>
+    <main>
+        <section class="batman">
 
-  <footer class="rodape">
-    <p>Rodapé de exemplo</p>
-  </footer>
+        </section>
+
+        <section class="container">
+            <div class="caixa">Item 1</div>
+            <div class="caixa">Item 2</div>
+            <div class="caixa">Item 3</div>
+        </section>
+
+        <section class="container">
+            <div class="caixa">Item 1</div>
+            <div class="caixa">Item 2</div>
+            <div class="caixa">Item 3</div>
+        </section>
+</main>
+
+        <footer class="rodape">
+            <p>Rodapé de exemplo</p>
+        </footer>
 
 </body>
+
 </html>
