--- a/aula02.html
+++ b/aula02.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JK FINANCEIRO</title>
     <link rel="stylesheet" href="teste.css" />
+    <script src="https://kit.fontawesome.com/5729e0ff2e.js" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body>
 
     <header class="cabecalho">
-        <h1>JK FINANCEIRO</h1>
+
+
+        <div>
+            <h1>JK FINANCEIRO</h1>
+        </div>
+
     </header>
 
     <main>
@@ -19,23 +27,150 @@
 
         </section>
 
+        <div class="img-div"></div>
+
+        <section class="container" id="garrafa">
+            <div class="caixa">Item 1</div>
+            <div class="caixa">Item 2</div>
+            <div class="caixa">Item 3</div>
+        </section>
+
+        <div class="img-div"></div>
+
+        <section class="robben container">
+            <div class="caixa div-robben">
+                <div class="icon-robben">
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-twitch"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
+                </div>
+
+                <div>
+                    <h3>Título caixa</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non laudantium exercitationem ullam
+                        quod possimus reiciendis </p>
+                </div>
+            </div>
+            <div class="caixa div-robben">
+                <div class="button-div-robben">
+
+                    <div>
+                        <a href="#garrafa">
+                            <button>SAIBA MAIS</button>
+                        </a>
+                    </div>
+
+                    <div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nisi consectetur rerum iste
+                            omnis odio quaerat rem temporibus autem fugit enim debitise!.</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <div class="img-div"></div>
+
         <section class="container">
             <div class="caixa">Item 1</div>
             <div class="caixa">Item 2</div>
             <div class="caixa">Item 3</div>
         </section>
 
-        <section class="container">
-            <div class="caixa">Item 1</div>
-            <div class="caixa">Item 2</div>
-            <div class="caixa">Item 3</div>
-        </section>
-</main>
+        <div class="img-div"></div>
+    </main>
 
-        <footer class="rodape">
-            <p>Rodapé de exemplo</p>
-        </footer>
+    <footer class="rodape">
 
+
+        <div class="content">
+
+            <div class="div-list">
+                <ul>
+                    <li>
+                        <a href="">SAIBA MAIS</a>
+                    </li>
+
+                    <li>
+                        <a href="">POLÍTICA DE PRIVACIDADE</a>
+                    </li>
+
+                    <li>
+                        <a href="">LGPD</a>
+                    </li>
+
+                    <li>
+                        <a href="">SUPORTE</a>
+                    </li>
+
+                </ul>
+
+                <hr class="line">
+            </div>
+
+            <div class="div-list">
+                <ul>
+                    <li>
+                        <a href="">SAIBA MAIS</a>
+                    </li>
+
+                    <li>
+                        <a href="">POLÍTICA DE PRIVACIDADE</a>
+                    </li>
+
+                    <li>
+                        <a href="">LGPD</a>
+                    </li>
+
+                    <li>
+                        <a href="">SUPORTE</a>
+                    </li>
+
+
+                </ul>
+
+                <hr class="line">
+            </div>
+
+            <div class="div-list">
+                <ul>
+                    <li>
+                        <a href="">SAIBA MAIS</a>
+                    </li>
+
+                    <li>
+                        <a href="">POLÍTICA DE PRIVACIDADE</a>
+                    </li>
+
+                    <li>
+                        <a href="">LGPD</a>
+                    </li>
+
+                    <li>
+                        <a href="">SUPORTE</a>
+                    </li>
+
+
+                </ul>
+
+                <hr class="line">
+            </div>
+
+
+        </div>
+
+        <hr class="line-strong">
+
+
+        <div class="social-media">
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-twitch"></i>
+            <i class="fa-brands fa-instagram"></i>
+        </div>
+    </footer>
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
