--- a/aula02.html
+++ b/aula02.html
@@ -14,10 +14,8 @@
 <body>
 
     <header class="cabecalho">
-
-
         <div>
-            <h1>JK FINANCEIRO</h1>
+            <h1>JK FINANCE</h1>
         </div>
 
     </header>
