--- a/aula02.html
+++ b/aula02.html
@@ -15,7 +15,7 @@
 
     <header class="cabecalho">
         <div>
-            <h1>JK FINANCE</h1>
+            <img src="imagens/LOGO JK FINANCE - WHITE.png" alt="" width="30%">
         </div>
 
     </header>
@@ -23,6 +23,14 @@
     <main>
         <section class="batman">
 
+              <div class="div-batman-0">
+                  <p>Cuide de seus Gastos com a <span>JK FINANCE.</span>
+                  </p>
+              </div>
+
+              <div class="div-batman">
+                 
+              </div>
         </section>
 
         <div class="img-div"></div>
